# guard_backbone

./: Dockerfile  README.md  Start_Dashboard.bat  build_dist.ps1  dashboard.html  dashboard_integration_guide.md  docker-compose.yaml  envoy.yaml  launch_gui.ps1  out.txt  pyproject.toml  run_gui.py
apps/gateway/: pyproject.toml
apps/gateway/gateway_service/: app.py
apps/gateway/gateway_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/gateway/tests/: test_app.py
dist_portable/: dashboard.html
infra_sandbox/database_remediation/: main.tf
policies/: sre_safety.rego  system_rules.rego
state_data/: last_audit_hash.txt
state_data/audit_events/: decision_1c6347eb-7c28-45fd-a75a-ef834b0cc76d.json  decision_8b7d3b4f-187f-477d-b603-5f0c670fd865.json  enf_1c6347eb-7c28-45fd-a75a-ef834b0cc76d.json  enf_8b7d3b4f-187f-477d-b603-5f0c670fd865.json
