[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guard-backbone"
version = "0.1.0"
description = "Sovereign Core: The Runtime Firewall for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic",
    "urllib3",
    "uvicorn",
    "prometheus-client",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.workspaces]
members = [
    "packages/core",
    "packages/sdk",
    "packages/enforcement",
    "packages/logic",
    "packages/scoring",
    "packages/shared_utils",
]

[tool.hatch.envs.default]
dev-mode = true
dependencies = [
    "pytest",
    "httpx",
]
